--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Run WxReadHelper
         env:
           WX_READ_USERS: ${{ secrets.WX_READ_USERS }}
-        run: java -cp target/wxReadHelp-0.1.jar cn.ustc.WxReadHelper
+        run: java -cp target/wxReadHelp-1.0.jar cn.wxreader.WxReadHelper
