--- a/.github/workflows/exchange.yml
+++ b/.github/workflows/exchange.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Run WxReadHelp
         env:
           WX_READ_USERS: ${{ secrets.WX_READ_USERS }}
-        run: java -cp target/wxReadHelp-0.1.jar cn.ustc.WxReadExchange
+        run: java -cp target/wxReadHelp-1.0.jar cn.wxreader.WxReadExchange
