--- a/.github/workflows/exchange.yml
+++ b/.github/workflows/exchange.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04.5
 
     steps:
       - name: Checkout repository
@@ -22,7 +22,7 @@ jobs:
       - name: Build with Maven
         run: mvn clean install | tee build.log
 
-      - name: Run WxReadHelp
+      - name: Run WxReadExchange
         env:
           WX_READ_USERS: ${{ secrets.WX_READ_USERS }}
         run: java -cp target/wxReadHelp-1.0.jar cn.wxreader.WxReadExchange
