--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
     <version>1.0</version>
 
-    <name>wxReadHelp</name>
+    <name>wxReadHelper</name>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
