--- a/.github/workflows/read.yml
+++ b/.github/workflows/read.yml
@@ -2,7 +2,7 @@ name: wxReadHelper
 
 on:
   schedule:
-    - cron: '0 21 * * *'  # 每天北京时间5点执行
+    - cron: '0 0 * * * *'  # 每天北京时间5点执行
   workflow_dispatch:  # 手动触发
 
 jobs:
